# paris-API

./: README.md  SUMMARY.md  getting-started.md  life-cycle.md
gui-api/: README.md  button.md  checkbox.md  color_picker.md  combo.md  slider.md
modules/: README.md  ai.md  callbacks.md  clipboard.md  editor.md  engine.md  fs.md  input.md  intellisense.md  json.md  mathx.md  net.md  render.md  settings.md  terminal.md  tools.md  util.md
paris-scripting/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
paris-scripting/demo/: main.cpp  runner.cpp
paris-scripting/docs/: api.md  menu_integration.md
paris-scripting/include/paris/: ai.hpp  autosave.hpp  callbacks.hpp  clipboard.hpp  editor.hpp  engine.hpp  fs.hpp  game_profile.hpp  hot_reload.hpp  imgui_backend.hpp  input.hpp  intellisense.hpp  json.hpp  keybind_driver.hpp  mathx.hpp  metadata.hpp  net.hpp  paris_compat.hpp  render.hpp  sandbox.hpp  settings.hpp  terminal.hpp  tools.hpp  types.hpp  ui.hpp  util.hpp
paris-scripting/scripts/: config_demo.lua  esp.as  esp.lua  ide_ai_tool.lua  ide_format_on_save.lua  ide_intellisense.lua  ide_settings_panel.lua  input_demo.lua  math_demo.lua  net_demo.lua
paris-scripting/src/: ai.cpp  autosave.cpp  callbacks.cpp  clipboard.cpp  editor.cpp  engine.cpp  fs.cpp  game_profile.cpp  hot_reload.cpp  input.cpp  intellisense.cpp  json.cpp  keybind_driver.cpp  log.cpp  metadata.cpp  net.cpp  paris_compat.cpp  render.cpp  sandbox.cpp  script_as.cpp  script_lua.cpp  settings.cpp  terminal.cpp  tools.cpp  ui.cpp  util.cpp
types/: color_t.md  matrix4x4.md  quaternion.md  vec2_t.md  vec3_t.md  vector2.md  vector3.md
ui/: README.md  button.md  checkbox.md  color_picker.md  configs.md  input.md  keybind.md  list.md  multi_select.md  single_select.md  slider.md  subtabs-and-panels.md
